deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tebe
  # Notice: namespace is omitted here so Argo CD controls the target namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tebe
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: nginx-tebe
    spec:
      containers:
        - name: nginx
          image: image-registry.openshift-image-registry.svc:5000/tebe/nginx-tebe:latest
          ports:
            - containerPort: 8080
