all-in-one.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-push-route
  namespace: tprasojo-lyrid-dev
spec:
  to:
    kind: Service
    name: el-github-push-listener
  port:
    targetPort: http-listener
  tls:
    termination: edge
